--- a/lib/resources/markdown-themes/markdown-alt.css
+++ b/lib/resources/markdown-themes/markdown-alt.css
@@ -1,25 +1,25 @@
 body {
-	line-height: 1.4em;
-	color: black;
-        padding:1em;
-        margin:auto;
-        max-width:42em;
+    line-height: 1.4em;
+    color: black;
+    padding: 1em;
+    margin: auto;
+    max-width: 42em;
 }
 
 li {
-	color: black;
+    color: black;
 }
 
 h1,
-h2, 
-h3, 
-h4, 
-h5, 
+h2,
+h3,
+h4,
+h5,
 h6 {
     border: 0 none !important;
 }
 
-h1 {    
+h1 {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     border-bottom: 2px solid #000080 !important;
@@ -27,12 +27,12 @@ h1 {
 
 h2 {
     margin-top: 1em;
-    margin-bottom: 0.5em;    
-	border-bottom: 2px solid #000080 !important;    
+    margin-bottom: 0.5em;
+    border-bottom: 2px solid #000080 !important;
 }
 
 pre {
-	background-color: #f8f8f8;    
+    background-color: #f8f8f8;
     border: 1px solid #2f6fab;
     border-radius: 3px;
     overflow: auto;
@@ -41,35 +41,36 @@ pre {
 
 pre code {
     background-color: inherit;
-    border: none;    
+    border: none;
     padding: 0;
 }
 
 code {
-	background-color: #ffffe0;
+    background-color: #ffffe0;
     border: 1px solid orange;
     border-radius: 3px;
     padding: 0 0.2em;
 }
 
 a {
-	text-decoration: underline;	
+    text-decoration: underline;
 }
 
 ul, ol {
-	padding-left: 30px;
+    padding-left: 30px;
 }
 
 li {
-	margin: 0.2em 0 0 0em; padding: 0px;
+    margin: 0.2em 0 0 0em;
+    padding: 0px;
 }
 
 em {
-	color: #b05000;
+    color: #b05000;
 }
 
 table.text th, table.text td {
-	vertical-align: top;
-	border-top: 1px solid #ccc;
-	padding:5px;
+    vertical-align: top;
+    border-top: 1px solid #ccc;
+    padding: 5px;
 }
