--- a/lib/resources/markdown-themes/foghorn.css
+++ b/lib/resources/markdown-themes/foghorn.css
@@ -43,6 +43,11 @@ nav p {
     margin: 0;
 }
 
+p > img {
+    max-width: 100%;
+    margin: auto;
+}
+
 /* Typography
 -------------------------------------------------------- */
 
